[gd_scene load_steps=4 format=3 uid="uid://cb5gnjmcn586k"]

[ext_resource type="TileSet" uid="uid://bm8j5kvkieyqj" path="res://tilesets/environment.tres" id="1_ge6jh"]
[ext_resource type="Script" path="res://game_objects/platforms/platform.gd" id="2_5wvgf"]
[ext_resource type="PackedScene" uid="uid://dfuvfdol77fc2" path="res://gui/tone_label.tscn" id="3_o3lkj"]

[node name="Platform" type="TileMap"]
tile_set = ExtResource("1_ge6jh")
format = 2
layer_0/name = "Platform"
layer_0/modulate = Color(1, 0.407843, 0.337255, 1)
layer_0/tile_data = PackedInt32Array(0, 65536, 0, 65536, 65536, 2, 1, 196608, 0, 65537, 196608, 2)
script = ExtResource("2_5wvgf")

[node name="BottomPivot" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, 96)

[node name="LeftPivot" type="Node2D" parent="BottomPivot"]
unique_name_in_owner = true

[node name="MarginContainer" type="MarginContainer" parent="BottomPivot/LeftPivot"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -48.0
offset_right = 42.0
grow_vertical = 0
theme_override_constants/margin_left = 8
theme_override_constants/margin_right = 8

[node name="LeftToneLabel" parent="BottomPivot/LeftPivot/MarginContainer" instance=ExtResource("3_o3lkj")]
unique_name_in_owner = true
layout_mode = 2
show_keys = false

[node name="RightPivot" type="Node2D" parent="BottomPivot"]
unique_name_in_owner = true
position = Vector2(96, 0)

[node name="MarginContainer" type="MarginContainer" parent="BottomPivot/RightPivot"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -42.0
offset_top = -48.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/margin_left = 8
theme_override_constants/margin_right = 8

[node name="RightToneLabel" parent="BottomPivot/RightPivot/MarginContainer" instance=ExtResource("3_o3lkj")]
unique_name_in_owner = true
layout_mode = 2
show_keys = false
